--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.1.0",
+        "laravel-vue-pagination": "^4.1.0",
         "vue": "^3.2.36"
     }
 }
